# ur-late

./: .gitignore  README.md  main.py  pyproject.toml
static/: script.js
static/css/: main.css  mobile.css  style.css
templates/: header.html  index.html  layout.html  main.html
